tine20/Tinebase/styles/darkmode.scss
@use './common' as *;

// NOTE: we need to use native prefers-color-scheme to prevent white/black flickering on new window
//       as *-mode cls is appended after js bootstrap which needs some time
@media (prefers-color-scheme: dark) {
  body {
    // note: we can't use brightness or contrast as we can't reverse it!
    filter: invert(1) hue-rotate(180deg);
    background-color: black;
  }
  .light-mode {
    filter: none;
    background-color: white;
  }
}

body.dark-mode {
  filter: invert(1) hue-rotate(180deg);
  background-color: black;
}

.color-scheme-dark {
  background-image: url('../../images/icon-set/icon_moon_light.svg');
}
.color-scheme-light {
  background-image: url('../../images/icon-set/icon_sun_light.svg');
}
.dark-mode {
  ::selection {
    background: #2196f3;
  }
  --selection-color: #8bb1ee;
  --tab-color: #ffffff;
  --field-bg-color: #333333;
  --tip-bg-color: #e0ebf9;
  --tip-color: #000000;
  --shadow-color: #e0ebf9;

  .hu-color-picker .saturation,
  .hu-color-picker .hue,
  .hu-color-picker .color-show,

  .dark-reverse {
    filter: invert(1) hue-rotate(180deg);

    .btn-close {
      filter: invert(1);
      color: white !important;
    }

  }

  .modal-content {
    color:white;
    background-color: rgb(33, 37, 41);
  }

  .x-color-palette a {
    border-color: initial;
  }

  .tine-mainscreen-apptabs .x-tab-strip-wrap ul.x-tab-strip-top,
  .tine-mainscreen-mainmenu .x-toolbar {
    background-color: #ddd;
  }
  .tine-mainscreen-centerpanel-north {
    .x-toolbar {
      background-color: #ffffff;
      filter: brightness(0.8);
      @include button(#ffffff);
    }
    .x-panel-bwrap {
      background-color: transparent;
    }
    input {
      background-color: transparent;
      border-bottom: 1px solid white !important;
    }
  }

  .tine-mainscreen-apptabs {
    ul.x-tab-strip {
      border-bottom: 1px solid var(--selection-color);
      height: 25px;
      .x-tab-strip li.x-tab-strip-active {
        border: 1px solid var(--selection-color);
      }

      li {
        &.x-tab-strip-active {
          border: 1px solid var(--selection-color);
        }
        &.x-tab-strip-active,
        &:hover {
          background-color: #ffffff !important;
          filter: brightness(0.8);
        }
      }
    }
  }

  .x-tab-strip span.x-tab-strip-text:hover,
  .x-tab-strip-active span.x-tab-strip-text,
  .x-tab-strip-active .x-tab-strip-close,
  .tine-mainscreen-mainmenu .x-btn,
  .tine-mainscreen-apptabs ul.x-tab-strip span.x-tab-strip-text,
  .tine-mainscreen-apptabs ul.x-tab-strip a.x-tab-strip-close {
    filter: invert(0) !important;
  }

  ul.x-tab-strip li {
    background-color: initial;
  }

  .x-border-panel .x-tab-panel-header,
  .x-tab-panel-header-plain .x-tab-strip-spacer,
  ul.x-tab-strip li.x-tab-strip-active,
  ul.x-tab-strip li:hover {
    background-color: var(--selection-color);
  }

  .x-panel-body,
  .x-grid3,
  .x-grid3-scroller,
  .x-combo-list-inner {
    background-color: #ddd;
  }

  .x-props-grid .x-grid3-body {
    .x-grid3-td-value {
      color: #ffffff;
      background-color: var(--field-bg-color) !important;
      filter: invert(1) hue-rotate(180deg);
    }
  }

  .x-grid3-cell-selected span{
    color:#ffffff !important;
  }

  /* TOOLBAR */
  .x-toolbar {
    background-color: #e2e2e2;
    @include button(#e2e2e2);
  }

  .x-grid3-row {
    border-bottom: 0.5px solid white;
  }

  textarea.x-form-field, // wrap-less
  .custom-field > .x-form-field, // wrap-less
  .x-form-element > .x-form-field, // wrap-less
  .x-box-inner > .x-form-field, // wrap-less
  .x-column-inner > .x-form-field, // wrap-less
  .x-small-editor > .x-form-field, // wrap-less
  .x-toolbar-cell > .x-form-field, // wrap-less
  .tw-ftb-frow-field > .x-form-field, // wrap-less
  .tw-ftb-frow-operator > .x-form-field, // wrap-less
  .tw-ftb-frow-value > .x-form-field, // wrap-less
  .x-grid3-cell-inner > .x-form-field, // wrap-less, quickadd editor
  .ext-webkit .x-form-field-wrap,
  .x-form-field-wrap {
    filter: invert(1) hue-rotate(180deg);
    border-bottom: 1px solid #1b1b1b;
    &.x-form-invalid {
      background-color: #1c0c0c !important;
    }
  }
  .x-form-invalid-tip .x-tip-body {
    filter: none;
  }
  .x-form-text, textarea.x-form-field {
    color: #ffffff;
  }
  .x-form-text.x-form-empty-field, textarea.x-form-empty-field.x-form-field {
    color: #929292;
  }


  .status-fields {
    textarea.x-form-field, // wrap-less
    .x-form-element > .x-form-field, // wrap-less
    .x-box-inner > .x-form-field, // wrap-less
    .x-small-editor > .x-form-field, // wrap-less
    .ext-webkit .x-form-field-wrap,
    .x-form-field-wrap {
      background-color: transparent;
      border-color: lighten(#1b1b1b, 10%) !important;
      &.x-form-focus,
      &.x-trigger-wrap-focus {
        border-color: var(--focus-color) !important;
      }
    }
  }

  .x-form-trigger.x-form-trigger-plugin {
    filter: none;
  }

  .ux-imagefield-ct img,
  .addressbook-search-combo img,
  .contact-image img,
  .ux-imagefield-ct,
  .ux-imagefield-text,
  .ux-imagefield-button,
  .tw-window-iframe,
  .x-form-field-wrap .x-form-trigger,
  .x-form-trigger.x-form-arrow-trigger,
  .x-form-check-wrap .x-form-checkbox,
  .x-form-trigger,
  .x-form-twin-triggers + .x-form-trigger.x-form-trigger-plugin {
    filter: invert(1) hue-rotate(180deg);
  }

  .x-form-field.x-form-text.x-form-num-field-positiv {
    color: #00FF00;
  }

  .x-form-field.x-form-text.x-form-num-field-negativ {
    color: #ff8585;
  }

  .addressbook-search-combo img[src*="undefined_contact"],
  .addressbook-search-combo img[src*="icon"] {
    filter: none;
  }

  .tw-editdialog .status-fields input {
    background-color: transparent;
    border-bottom: none;
  }

  .x-form-display-field.ace_editor,
  .x-form-field.ace_editor {
    filter: none;
    .ace_content {
      background-color: #dbdbdb;
    }
    .ace_gutter-layer {
      background-color: lighten(#dbdbdb, 5%);
    }
    .ace_gutter-layer .ace_gutter-active-line {
      background-color: darken(#dbdbdb, 5%);
    }
    .ace_marker-layer .ace_active-line {
      background-color: darken(#dbdbdb, 10%);
    }
  }
  .tinebase-editmultipledialog-noneedit,
  input.tinebase-editmultipledialog-noneedit,
  textarea.x-form-field.tinebase-editmultipledialog-noneedit,
  .x-props-grid .x-grid3-body .x-grid3-td-value.tinebase-editmultipledialog-noneedit {
    background-color: #4f4021 !important;
    background-image:none!important;
  }

  .x-ux-display-background-border {
    background-color: transparent;
  }
  .x-form {
    .x-panel-tr,
    .x-panel-tc,
    .x-panel-tl,
    .x-panel-mr,
    .x-panel-mc,
    .x-panel-ml,
    .x-panel-br,
    .x-panel-bc,
    .x-panel-bl,
    .x-panel-bwrap {
      background-color: #ddd;
    }
  }
  .tb-login-panel .x-panel-body.x-form {
    background-color: #c0ced8;
  }
  .attendance-clock-menu-button-clock_in .attendance-clock {
    filter: invert(1) hue-rotate(180deg);
  }
  .attendance-clock-menu-button-clock_out .attendance-clock {
    background-color: red !important;
  }
  .attendance-clock-menu-button {
    .x-btn-image {
      background-color: black;
    }
    div.x-btn-arrow {
      background-color: white;
    }
  }
  a {
    color: #3e4f55;
  }
  .ol-viewport,
  .emoji,
  video {
    filter: invert(1) hue-rotate(180deg);
  }
  // Felamimail
  .is_spam_suspicions td {
    color: #7a5010;
  }

  .bootstrap-scope  .form-switch .form-check-input:checked {
    --bs-form-switch-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23000'/%3e%3c/svg%3e");
  }
}

